# bitloop-three-body-problem

./: .bitloop-workspace  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
ThreeBodyProblem/: ThreeBodyProblem.cpp  ThreeBodyProblem.h  orbit_sim.h  orbit_sim.hpp
cmake/toolchain/: vcpkg_autodetect.cmake
tooling/: findBitloop.cmake
tooling/cmake/toolchain/: vcpkg_autodetect.cmake
tooling/cmake/triplets/: wasm32-emscripten-multithreaded.cmake
tooling/scripts/: update_bitloop.py
tooling/toolchain/: discovery_shims.cmake  discovery_toolchain.cmake  merge_vcpkg_manifests.cmake  vcpkg_autodetect.cmake
